--- a/package.json
+++ b/package.json
@@ -2,21 +2,17 @@
   "name": "test-assignment",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Alexey Zheryakov",
+    "email": "az1773443@gmail.com"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.17",
-    "@types/react": "^17.0.15",
-    "@types/react-dom": "^17.0.9",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -42,5 +38,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^12.20.17",
+    "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.9",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.3.5"
   }
 }
